--- a/README
+++ b/README
@@ -7,6 +7,10 @@ These are shared here so biomedical researchers, clinicians, and bioinformaticia
 
 Source schema, examples, and validation tools are grouped by implementation format of VarioML, with each format serving a large segment of biomedical users. E.g: the cafe_variome directory contains schema, examples, and validation tools for the the Cafe Variome format, which facilitates the exchange of sequence variant data from diagnostic laboratories to diverse third parties (http://www.cafevariome.org/).
 
+More information on VarioML can be found at:
+*reference*: http://varioml.org
+*wiki*: http://www.gen2phen.org/groups/varioml
+
 You can suggest improvements by entering an Issue, or if you see a technical improvement you can make yourself, by:
 - cloning the repository
 - making your changes
