--- a/README.org
+++ b/README.org
@@ -7,11 +7,13 @@ These are shared here so biomedical researchers, clinicians, and bioinformaticia
 - fork and modify a schema to adapt it to a specific research or clinical need   
 - log and track issues, and contributed improvements
 
-Source schema, examples, and validation tools are grouped by implementation format of VarioML, with each format serving a large segment of biomedical users. E.g: the cafe_variome directory contains schema, examples, and validation tools for the the Cafe Variome format, which facilitates the exchange of sequence variant data from diagnostic laboratories to diverse third parties ([[http://www.cafevariome.org/]]).
+Source schema, examples, and validation tools are grouped by implementation format of VarioML, with each format serving a large segment of biomedical users. E.g: the cafe_variome directory contains schema, examples, and validation tools for the *Cafe Variome* format, which facilitates the exchange of sequence variant data from diagnostic laboratories to diverse third parties ([[http://www.cafevariome.org/]]).
 
 More information on VarioML can be found at:
 - *reference*: http://varioml.org
 - *wiki*: http://www.gen2phen.org/groups/varioml
+
+** Improve VarioML 
 
 You can suggest improvements by entering an Issue, or if you see a technical improvement you can make yourself, by:
 - cloning the repository
@@ -21,7 +23,7 @@ You can suggest improvements by entering an Issue, or if you see a technical imp
 
 This same process can be used to create a new schema for a specific research or clinical use.
 
--------
+<hr/>
 
 VarioML has received funding from the European Community's Seventh Framework Programme (FP7/2007-2013) 
 under grant agreement number 200754 - the GEN2PHEN project.
