--- a/README.org
+++ b/README.org
@@ -10,8 +10,8 @@ These are shared here so biomedical researchers, clinicians, and bioinformaticia
 Source schema, examples, and validation tools are grouped by implementation format of VarioML, with each format serving a large segment of biomedical users. E.g: the cafe_variome directory contains schema, examples, and validation tools for the *Cafe Variome* format, which facilitates the exchange of sequence variant data from diagnostic laboratories to diverse third parties ([[http://www.cafevariome.org/]]).
 
 More information on VarioML can be found at:
-- *reference*: http://varioml.org
-- *wiki*: http://www.gen2phen.org/groups/varioml
+- *reference*: [[http://varioml.org]]
+- *wiki*: [[http://www.gen2phen.org/groups/varioml]]
 
 ** Improve VarioML 
 
