--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * VarioML
  
-Note: We ae currenly moving the repo from old svn site and it is not yet upto-date.
+Note: We ae currenly moving this repo from an older svn site and it is not yet up-to-date.
 
 This project collects the source schema and validation tools for VarioML, a biomedical data standard supporting the integration, federation, and exchange of Variation Data ([[http://varioml.org/]]).
 
