--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * VarioML
  
-Note: We are currently moving this repo from an older svn site and it is not yet up-to-date.
+Note: Version 1.0 is now on separate branch. Main trunc is heading to final 2.0. Only difference between 1.0 and 2.0 is that variant element can have haplotype elements containing variants which are in cis position.
 
 This project collects the source schema and validation tools for VarioML, a biomedical data standard supporting the integration, federation, and exchange of Variation Data ([[http://varioml.org/]]).
 
