--- a/README.org
+++ b/README.org
@@ -30,9 +30,10 @@ VarioML has received funding from the European Community's Seventh Framework Pro
 under grant agreement number 200754 - the GEN2PHEN project.
 
 ** News
-- 9.2.2012: JAXB / JSON (based on Jacson) API implementation is in org.varioml.jaxb folder. Code is not fully tested. 
+
+- 9.2.2012: JAXB / JSON (based on Jacson) API implementation is in org.varioml.jaxb folder. Code is not fully tested. SimpleXML implementation will be retired (support is possible though)
 
 - Note: Version 1.0 is now on separate branch. Main trunc is heading to final 2.0. Only difference between 1.0 and 2.0 is that variant element can have haplotype elements containing variants which are in cis position. Namespace will be kept same.
 
-- Comments/feedback: admin <> varioml.org
+- Comments/feedback: admin <> varioml.org. Please send email if you are using the software so that we can accomodate your requirementsi!
 
