--- a/README.org
+++ b/README.org
@@ -1,9 +1,16 @@
 * VarioML
-** Important
-- Please let us know if you are planning to use this spescification and tools by sending email to *admin* user (at address *varioml.org*). This is important because documentation is not uptodate, and some things may change. Also, more importantly, we need to ensure that all implementations are *consistent and constrained proplery* using Schematron.   
-- Currently there is only one implementation  developed for the CafeVariome (http://cafevariome.org). Spec is available here: http://varioml.org/cafevariome_minspec.htm and the Schematron implementation: https://raw.github.com/VarioML/VarioML/master/xml/cafe_variome/cafe_variome_validator.sch
-- Use standard ontologies for the content like Sequence ontology (http://www.sequenceontology.org/) and VariO (http://variationontology.org/). Some terms are defined using SKOS vocabularies: https://github.com/VarioML/VarioML/tree/master/ontology/skos
-- Source attribute in database xrefs (like gene and ref_seq) and ontology terms should based on database abbreviations defined in the MIRIAM registry (http://identifierds.org). For example "hgnc.symbol" for gene names, "refseq" NCBI reference sequences and "obo.so" for sequence ontology 
+
+*VarioML is a collaborative, community-driven specification in active development.* Your first step should be to contact *admin* at *varioml.org*, as documentation is not yet complete.
+
+*Important*: 
+- All new implementations should use validation to ensure consistency with the core specification. Contact *admin* at *varioml.org* for help with generating validation scripts using Schematron. 
+- Use standard ontologies for the content, such as the Sequence ontology [[http://www.sequenceontology.org/]] and VariO [[http://variationontology.org/]]. Some terms are defined using SKOS vocabularies: [[https://github.com/VarioML/VarioML/tree/master/ontology/skos]].
+- Source attributes in database xrefs (such as /gene/ and /ref_seq/) and ontology terms should use database abbreviations defined in the MIRIAM registry at [[http://identifiers.org]]. For example, use /hgnc.symbol/ for gene names, /refseq/ for NCBI reference sequences, and /obo.so/ for Sequence Ontology references.
+
+*VarioML is currently implemented in Café Variome [[http://cafevariome.org]].*
+The specification for this implementation is [[http://varioml.org/cafevariome_minspec.htm]]. 
+A Schematron implementation is here: [[https://raw.github.com/VarioML/VarioML/master/xml/cafe_variome/cafe_variome_validator.sch]]
+
 ** Background
 This project collects the source schema and validation tools for VarioML, a biomedical data standard supporting the integration, federation, and exchange of LSDB Data ([[http://varioml.org/]]).
 VarioML is desinged for curated LSDB data submissions and application integeration and is *focused on individual variant entries*. Format may not be suitable for handling bulk high throughput data, in which case e.g. VCF fomat may be more sutable.
